# ai-powered-book-generation-app

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: __init__.py  books.py
app/config/: __init__.py  database.py  settings.py
app/models/: __init__.py  book.py
app/prompts/: __init__.py  book_prompts.py
app/repositories/: __init__.py  base.py  book_repository.py
app/schemas/: __init__.py  book_schemas.py
app/services/: __init__.py  book_generation_service.py  llm_service.py  pdf_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
