[project]
name = "book-generator-and-downloader"
version = "0.1.0"
description = "AI-powered Book Generator with FastAPI and React"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "litellm>=1.93.0",
    "sqlmodel>=0.0.23",
    "asyncpg>=0.30.0",
    "reportlab>=4.5.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
]
